# src/openapi.yaml
@@ -10,93 +10,7 @@ info:
 security:
   - basic: []
 paths:
-  /domeindata:
-    get:
-      operationId: domeindata_list
-      description: ''
-      responses:
-        '200':
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/DomeinData'
-      tags:
-        - domeindata
-    post:
-      operationId: domeindata_create
-      description: ''
-      responses:
-        '201':
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DomeinData'
-      tags:
-        - domeindata
-      requestBody:
-        $ref: '#/components/requestBodies/DomeinData'
-    parameters: []
-  '/domeindata/{id}':
-    get:
-      operationId: domeindata_read
-      description: ''
-      responses:
-        '200':
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DomeinData'
-      tags:
-        - domeindata
-    put:
-      operationId: domeindata_update
-      description: ''
-      responses:
-        '200':
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DomeinData'
-      tags:
-        - domeindata
-      requestBody:
-        $ref: '#/components/requestBodies/DomeinData'
-    patch:
-      operationId: domeindata_partial_update
-      description: ''
-      responses:
-        '200':
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DomeinData'
-      tags:
-        - domeindata
-      requestBody:
-        $ref: '#/components/requestBodies/DomeinData'
-    delete:
-      operationId: domeindata_delete
-      description: ''
-      responses:
-        '204':
-          description: ''
-      tags:
-        - domeindata
-    parameters:
-      - name: id
-        in: path
-        description: A unique integer value identifying this domeindata.
-        required: true
-        schema:
-          type: integer
-  /rsgb/verblijfsobjecten:
+  /verblijfsobjecten:
     get:
       operationId: verblijfsobject_list
       description: ''
@@ -110,7 +24,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - rsgb
+        - verblijfsobjecten
     post:
       operationId: verblijfsobject_create
       description: ''
@@ -122,11 +36,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - rsgb
+        - verblijfsobjecten
       requestBody:
         $ref: '#/components/requestBodies/VerblijfsObject'
     parameters: []
-  '/rsgb/verblijfsobjecten/{id}':
+  '/verblijfsobjecten/{id}':
     get:
       operationId: verblijfsobject_read
       description: ''
@@ -138,7 +52,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - rsgb
+        - verblijfsobjecten
     put:
       operationId: verblijfsobject_update
       description: ''
@@ -150,7 +64,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - rsgb
+        - verblijfsobjecten
       requestBody:
         $ref: '#/components/requestBodies/VerblijfsObject'
     patch:
@@ -164,7 +78,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/VerblijfsObject'
       tags:
-        - rsgb
+        - verblijfsobjecten
       requestBody:
         $ref: '#/components/requestBodies/VerblijfsObject'
     delete:
@@ -174,7 +88,7 @@ paths:
         '204':
           description: ''
       tags:
-        - rsgb
+        - verblijfsobjecten
     parameters:
       - name: id
         in: path
@@ -183,7 +97,7 @@ paths:
         schema:
           type: integer
 servers:
-  - url: /api/v1
+  - url: /api/v1/rsgb
 components:
   requestBodies:
     VerblijfsObject:
@@ -192,30 +106,11 @@ components:
           schema:
             $ref: '#/components/schemas/VerblijfsObject'
       required: true
-    DomeinData:
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/DomeinData'
-      required: true
   securitySchemes:
     basic:
       type: http
       scheme: basic
   schemas:
-    DomeinData:
-      required:
-        - data
-      type: object
-      properties:
-        url:
-          title: Url
-          type: string
-          format: uri
-          readOnly: true
-        data:
-          title: Data
-          type: string
     Adres:
       title: Hoofdadres
       required:
